welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: ';' expected but 'else' found.
	else {
        ^SlugHunting:10: error: illegal start of simple expression
}
^